# lamp-of-god

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  check.sh
.github/workflows/: check.yml
plots/: plots.py
src/: diode.cpp  diode.hpp  gui.cpp  gui.hpp  heatmap.cpp  heatmap.hpp  hitmap.cpp  hitmap.hpp  main.cpp  math.hpp  observers.cpp  observers.hpp  phys.hpp  plots.cpp  plots.hpp  recttube.cpp  recttube.hpp  sound.cpp  sound.hpp  test.cpp  test.hpp  tube.cpp  tube.hpp  widget.hpp
utils/: cvc.py  heatmap.py
